# StreamDock-Plugins

./: .gitignore  LICENSE  README.md
Examples/counter-plugin/: readme.md
Plugins/BTC/: package.json
Plugins/DeepSeek/: index.html  package.json  vite.config.ts
Plugins/Discord/: .prettierrc  ar.json  de.json  en.json  es.json  fr.json  i18n.mjs  it.json  ja.json  ko.json  manifest.json  package.json  pl.json  pt.json  readme.md  ru.json  zh_CN.json  zh_HK.json
Plugins/NobleMetal/: vite.config.ts
Plugins/StreamdockSwitchAudio/: CMakeLists.txt  HSDSwitchAudioAction.cpp  HSDSwitchAudioPlugin.cpp  HSDSwitchAudioPlugin.h  PolicyConfig.h  main.cpp
Plugins/Twitch/: fr.json  ja.json  ko.json  manifest.json  ru.json  (+1 more)
Plugins/performanceMonitorButMac/: CMakeLists.txt  HSDExamplePlugin.cpp  HSDExamplePlugin.h  README.md  README_CN.MD  cpuUsageRateAction.cpp  cpuUsageRateAction.h  imageHelper.cpp  imageHelper.h  performanceHelper.cpp  performanceHelper.h
Plugins/performanceMonitorButMac/com.mirabox.performancemonitor.mac.sdPlugin/: de.json  en.json  ja.json  manifest.json  pt.json  ru.json  zh_CN.json
Plugins/performanceMonitorButMac/com.mirabox.performancemonitor.mac.sdPlugin/PropertyInspector/: cpuTemperature.html  cpuTemperature.js  cpuUsageRate.html  cpuUsageRate.js  dataRate.html  dataRate.js  diskUsageRate.html  diskUsageRate.js  gpuTemperature.html  gpuTemperature.js  gpuUsageRate.html  gpuUsageRate.js  memoryUsageRate.html  memoryUsageRate.js
Plugins/performanceMonitorButMac/com.mirabox.performancemonitor.mac.sdPlugin/PropertyInspector/static/: action.js
(+564 files in other folders)
